transpile Knuth + DRY