@@ -3,61 +3,58 @@ package org.example.cli;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Mixin;
 import picocli.CommandLine.Parameters;
-import picocli.CommandLine.ParentCommand;
 import picocli.CommandLine.Option;
-import java.io.File;
-import java.io.FileWriter;
+
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 
-import org.example.App;
-
+// TranspileCommand.java
 @Command(name = "transpile")
 public class TranspileCommand implements Runnable {
-
-    @Mixin
-    private CommonOptions commonOptions;
-
-    @Parameters(index = "0")
-    private File input;
-
-    @Option(names = {"--out"})
-    private String outputDir = ".";
-
-
+    @Mixin private CommonOptions commonOptions;
+    @Parameters(index = "0") private Path input;
+    @Option(names = {"--out"}) private Path outputDir = Paths.get(".");
+    
     @Override
     public void run() {
+        transpileCommon(commonOptions, input, outputDir, "transpile");
+    }
 
-        if (!input.exists() || input.length() == 0 || !input.getName().endsWith(".expresso")) {
-            System.err.println("ERROR - Archivo .expresso no existe o esta vacio");
-            return;
+    protected static Path transpileCommon(CommonOptions commonOptions, Path input, Path outputDir, String context) {
+        try {
+            validateInput(input);
+            Path outputFile = prepareOutputFile(input, outputDir);
+            transpile(commonOptions, outputFile);
+            
+            if (commonOptions.verbose) {
+                System.out.println("SUCCESS - Archivo .java guardado en: " + outputFile.toAbsolutePath());
+            }
+            return outputFile;
+            
+        } catch (Exception e) {
+            System.err.println("ERROR - " + e.getMessage());
+            return null;
         }
-
-        Path templatePath = Paths.get("resources/template/HelloWorld.java");
-
-         String outputPath;
-         if (outputDir.equals(".")) {
-            outputPath = input.getParent() != null ? input.getParent() : ".";
-        } else {
-            outputPath = outputDir;
+    }
+    
+    private static void validateInput(Path input) throws IOException {
+        String filename = input.getFileName().toString();
+        if (!Files.exists(input) || Files.size(input) == 0 || !filename.toLowerCase().endsWith(".expresso")) {
+            throw new IllegalArgumentException("Archivo .expresso no existe o esta vacio");
         }
-        File outputDirFile = new File(outputPath);
-        if (!outputDirFile.exists()) outputDirFile.mkdirs();
-
-        String outputFileName = input.getName().replace(".expresso", ".java");
-        File outputFile = new File(outputDirFile, outputFileName);
-
+    }
+    
+    private static Path prepareOutputFile(Path input, Path outputDir) throws IOException {
+        Files.createDirectories(outputDir);
+        String filename = input.getFileName().toString();
+        return outputDir.resolve(filename.replaceAll("(?i)\\.expresso$", ".java"));
+    }
+    
+    private static void transpile(CommonOptions commonOptions, Path outputFile) throws IOException {
         if (commonOptions.verbose) System.out.println("Leyendo .expresso...");
-
-        try (FileWriter writer = new FileWriter(outputFile)) {
-            if (commonOptions.verbose) System.out.println("Transpilando...");
-            String template = new String(Files.readAllBytes(templatePath));
-            writer.write(template);
-            if (commonOptions.verbose) System.out.println("SUCCESS - Archivo .java guardado en: " + outputFile.getAbsolutePath());
-        } catch (IOException e) {
-            System.err.println("ERROR - No se pudo escribir el archivo " + e.getMessage());
-        }
+        String template = Files.readString(Paths.get("resources/template/HelloWorld.java"));
+        
+        if (commonOptions.verbose) System.out.println("Transpilando...");
+        Files.writeString(outputFile, template);
     }
 }
